<resources>
    <string name="app_name">Gasper</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_rpt_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_title">Create a new account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_title">Welcome!</string>
    <string name="sign_out">Sign out</string>
    <string name="desc_send_button">Send Message</string>
    <string name="hint_message">Type a message…</string>
    <string name="desc_photo_button">Add a photo</string>
    <string name="seen_ntf">Seen</string>
    <string name="sent_photo_desc">Sent image</string>
    <string name="search_hint">Search for someone</string>
    <string name="profile">Profile</string>
    <string name="forget_passwd">Forgot your password?</string>
</resources>
