<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/profile_image"
                tools:src="@drawable/ic_account_circle_black_36dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                tools:text="username"
                android:layout_marginStart="25dp"
                android:textColor="@color/title" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/bar_layout" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/outline_add_photo_alternate_24"
            android:contentDescription="@string/desc_photo_button" />

        <EditText
            android:id="@+id/msg_text"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/send_button"
            android:layout_toEndOf="@+id/photo_button"
            android:background="@android:color/transparent"
            android:hint="@string/hint_message"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/outline_send_gray_24"
            android:contentDescription="@string/desc_send_button" />


    </RelativeLayout>

</RelativeLayout>